--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@ DB_HOST=172.16.30.62
 DB_PORT=44060
 DB_NAME=mydatabase
 DB_USER=root
-DB_PASSWORD=Gq34Ko90#110
+DB_PASSWORD=XXXXX
 
 # Backend Configuration
 NODE_ENV=production
