feat: Complete Multi-Cloud VPC Data Synchronization Platform
## Major Features Added

### Multi-Provider Support
- AWS VPCs: 157 records from vpc_info table
- Alibaba Cloud: 7 records from ali_vpc_info table
- Azure VNets: 1 record from azure_vpc_info table
- Huawei Cloud: 2 records from hwc_vpc_info table
- Total: 167 VPCs across all cloud providers

### Microservice Architecture
- Dedicated data synchronization backend (port 3302)
- React frontend with nginx proxy (port 8080)
- Provider-specific API endpoints: /api/vpcs/{provider}
- Dynamic schema mapping for different cloud provider formats

### Dynamic Dashboard
- Real-time aggregation from all 4 cloud providers
- Auto-refresh every 30 seconds with 167 total VPCs
- Provider-specific color coding and tags
- Multi-cloud statistics and breakdowns

### Enhanced Components
- DynamicTable: Schema-adaptive with smart column rendering
- ProviderNetworkPage: Multi-provider routing support
- MinimalApp: Multi-cloud dashboard with aggregated data

### Backend Capabilities
- server-minimal.ts: Multi-provider API with intelligent schema transformation
- Automatic field mapping: VpcId, vpc_id, VNetName, ID variations
- Database table discovery and health monitoring
- Provider-specific data transformation and validation

### Frontend Features
- Provider-specific VPC inventory tables
- Dynamic table rendering based on database schema
- Real-time filtering, sorting, and export functionality
- In-line editing with permission controls

### Production Deployment
- Docker containerization with health checks
- Nginx proxy configuration for API routing
- Environment-based configuration management
- Comprehensive deployment documentation

## Technical Implementation

### Database Integration
- Connects to existing MySQL VPC inventory tables
- Dynamic schema detection and transformation
- Handles different column naming conventions across providers
- Connection pooling and error handling

### API Architecture
- RESTful endpoints for eac

--- a/.env.production
+++ b/.env.production
@@ -23,7 +23,7 @@ JWT_SECRET=CHANGE_ME_TO_SECURE_RANDOM_STRING
 
 # Security Headers
 HSTS_MAX_AGE=31536000
-CSP_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'
+CSP_POLICY="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'"
 # Logging Configuration
 LOG_LEVEL=info
 
