--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 # Development environment variables for Network CMDB Frontend
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=/api
 VITE_APP_TITLE=Network CMDB Dashboard (Development)
 VITE_APP_VERSION=1.0.0
 VITE_APP_ENVIRONMENT=development
